text below home page image no longer shifts

--- a/sperowebsite/src/styles/desktop/HomeDesktop.css
+++ b/sperowebsite/src/styles/desktop/HomeDesktop.css
@@ -89,6 +89,7 @@ a {
     text-align: center;
     padding-left: 30vw;
     padding-right: 30vw;
+    height: 62vh;
 }
 
 .home-centered {
